# langgraph-deep-research

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  test_research.py
.context/: index.md
langgraph-mcp/: README.md  example.py  pyproject.toml
langgraph-mcp/src/langgraph_mcp/: __init__.py  client.py  types.py
src/assistant/: configuration.py  graph.py
src/github_assistant/: configuration.py  graph.py  prompts.py  state.py
