[project]
name = "langgraph-mcp"
version = "0.1.0"
description = "MCP server for interacting with LangGraph API"
authors = []
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
]
